feat(repository): typed dictionary properties with legacy dual-read